<resources>
    <string name="app_name">Tugas</string>
    <string name="pendaftaran">PENDAFTARAN </string>
    <string name="pendaftaranberhasil">PENDAFTARAN BERHASIL</string>
    <string name="NamaDepan">Nama Depan:</string>
    <string name="NamaBelakang">Nama Belakang:</string>
    <string name="TTL">Tempat, Tanggal Lahir:</string>
    <string name="TempatLahir">Tempat Lahir:</string>
    <string name="TanggalLahir">Tanggal Lahir:</string>
    <string name="Alamat">Alamat:</string>
    <string name="JenisKelamin">Jenis Kelamin:</string>
    <string name="LakiLaki">Laki-Laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="Agama">Agama:</string>
    <string name="Islam">Islam</string>
    <string name="Katolik">Katolik</string>
    <string name="Kristen">Kristen</string>
    <string name="Budha">Buddha</string>
    <string name="AliranKepercayaan">Aliran Kepercayaan</string>
    <string name="Hindu">Hindu</string>
    <string name="Konghucu">Konghucu</string>
    <string name="Telepon">Nomor Telepon:</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="MasukkanPassword">Masukkan Password Kembali:</string>
    <string name="Daftar">Daftar</string>
    <string name="Kembali">Kembali</string>
    <string name="Selesai">Selesai</string>
</resources>
